# manda-lang

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  calc.out  calc.yy.scm  syntax.mn  w.opam
example/: array.mnd  async.mn  classes.mn  fib.mn  fib.w  generics.mn  generics.w  hello.mn  if_then.mn  import.mnd  import.w  interop.w  pointer.mnd  sum_type.mn  sum_type.w
frontend/: dune-project
frontend/src/: ast.ml  dune  lexer.mll  parser.mly  pass1.ml  pass1_types.ml
include/: manda_api.h
lib/: string.w
mandac/: manda.opam
mandac/src/: ast.ml  dune  lexer.mll  pass1.md  util.ml
protobuf/: manda.proto
src/: CMakeLists.txt  Lexer.hpp  Token.hpp  dump_tokens.cpp  dump_tree.cpp  dune  lexer.l  main.cpp  mandac.cpp  object.hpp  parser.y  type.cpp  type.hpp  type_reference.cpp  type_reference.hpp
src/analysis/: CMakeLists.txt  analyzer.cpp  analyzer.hpp  any_type.cpp  any_type.hpp  array_type.cpp  array_type.hpp  ast.cpp  ast.hpp  ast_printer.cpp  ast_printer.hpp  base_ctx.cpp  base_ctx.hpp  base_resolver.cpp  base_resolver.hpp  bool_type.cpp  bool_type.hpp  char_type.cpp  char_type.hpp  core_library.cpp  core_library.hpp  expr_ctx.cpp  expr_ctx.hpp  function_type.cpp  function_type.hpp  indenting_printer.cpp  indenting_printer.hpp  location.cpp  location.hpp  manda_exception.cpp  manda_exception.hpp  module.cpp  module.hpp  module_compiler.cpp  module_compiler.hpp  number_type.cpp  number_type.hpp  object.hpp  parser.cpp  parser.hpp  (+25 more)
src/compiler/: CMakeLists.txt  manda_compiler.cpp  manda_compiler.hpp
src/ir/: CMakeLists.txt  ir_function.cpp  ir_function.hpp  ir_instruction.cpp  ir_instruction.hpp  ir_module.cpp  ir_module.hpp  ir_parameter.cpp  ir_parameter.hpp  module_text_printer.cpp  module_text_printer.hpp
src/runtime/: CMakeLists.txt  ansi_printer.cpp  ansi_printer.hpp  any_type.cpp  any_type.hpp  array.cpp  array.hpp  array_type.cpp  array_type.hpp  ast_function.cpp  ast_function.hpp  base_resolver.cpp  base_resolver.hpp  bool.cpp  bool.hpp  bool_type.cpp  bool_type.hpp  builtin_function.cpp  builtin_function.hpp  char.cpp  char.hpp  char_type.cpp  char_type.hpp  core_library.cpp  core_library.hpp  error_reporter.cpp  error_reporter.hpp  function.cpp  function.hpp  garbage_collector.cpp  garbage_collector.hpp  generic_scope.cpp  generic_scope.hpp  interpreter.cpp  interpreter.hpp  jit_compiled_function.cpp  jit_compiled_function.hpp  jit_compiler.cpp  jit_compiler.hpp  late_bound_object.cpp  (+46 more)
testcases/: call_user_function.mn  get_variable.mn  if_true.mn  invalid_main.mn  print_args.mn  print_if_true.mn  print_int.mn  print_list.mn  print_tuple.mn  return_int.mn  return_tuple.mn
vim/ftdetect/: manda.vim
vim/syntax/: manda.vim
