cmake_minimum_required(VERSION 3.0)
project(manda)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
list(APPEND CMAKE_MODULE_PATH
  "${CMAKE_CURRENT_LIST_DIR}/free-cmake-scripts/find_package")
if(APPLE)
  list(APPEND CMAKE_C_FLAGS "-I/usr/local/include")
  list(APPEND CMAKE_CXX_FLAGS "-I/usr/local/include")
endif()
include_directories(include)
add_subdirectory(src)
