opam-version: "2.0"
version: "~dev"
synopsis: ""
maintainer: "Tobe O <thosakwe@gmail.com>"
authors: "Tobe O <thosakwe@gmail.com>"
license: ""
homepage: ""
bug-reports: ""
depends: [
  "specify-dependencies-here" {>= "optional-version"}
]
build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make]
]
install: [make "install"]
dev-repo: "git+https://"
url {
  src: "git+file:///Users/thosakwe/w#master"
}
