opam-version: "2.0"
name: "manda"
authors: "Tobe Osakwe"
homepage: "https://github.com/manda-lang/manda"
maintainer: "thosakwe@gmail.com"
dev-repo: "https://github.com/manda-lang/manda"
bug-reports: "https://github.com/manda-lang/manda/issues"
version: "0.0"
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "dune" {build}
  "opam-lock" {dev}
]